--- a/UserManagementApp/Views/User/Login.cshtml
+++ b/UserManagementApp/Views/User/Login.cshtml
@@ -21,6 +21,7 @@
                             <input type="password" class="form-control" id="password" name="Password" required>
                         </div>
                         <button type="submit" class="btn btn-primary w-100">Giriş Yap</button>
+                        <button type="button"  class="btn btn-outline-success" onclick="window.location.href='/User/Create'" class="btn btn-primary w-100">Yeni Kayıt</button>
                     </form>
 
                     <!-- Hata mesajı için modalı tetikle -->
